# as_cast

./: Cargo.toml  LICENSE-MIT  README-jp.md  README.md
.github/actions/rust-setup/: action.yml
.github/workflows/: rust-test.yml
src/: cast.rs  checked_cast.rs  lib.rs  macros.rs  saturating_cast.rs  strict_cast.rs  utility.rs
src/cast/: cast_float.rs  cast_int.rs
src/tests/: cast.rs  cast_float.rs  cast_int.rs  cast_utility.rs  checked_cast_float.rs  checked_cast_int.rs  saturating_cast_float.rs  saturating_cast_int.rs  strict_cast_float.rs  strict_cast_int.rs
