[package]
name = "as_cast"
version = "0.3.1"
categories = ["no-std"]
description = "Method-style, explicitly-lossy casts as an alternative to the as keyword."
edition = "2024"
keywords = ["cast", "checked", "integer", "float"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/komeml/as_cast"
rust-version = "1.85.0"
exclude = [".github/", ".gitignore"]

[features]
default = ["cast", "checked-cast", "saturating-cast"]
cast = []
checked-cast = []
saturating-cast = []
